--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "mongodb": "^6.14.2"
+    "mongodb": "^6.14.2",
+    "react-slick": "^0.30.3",
+    "slick-carousel": "^1.8.1"
   }
 }
